--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -1,77 +1,104 @@
 extends ../../layouts/default.pug
-include ./../../mixins/box-head.pug
-include ./../../mixins/layout-grid.pug
-include ../../mixins/notification-error.pug
-include ../../mixins/notification-success.pug
 
 block main 
-    +notification-success(messages.success)
-    +notification-error(messages.error)
+    .container.my-2
+        .row    
+            .col-3.my-5.label
+                .d-flex.justify-content-between
+                    .mt-1.font-weight-bold Đoạn chat
+                    .mt-1 
+                        a(title='Tạo nhóm chat' class='btn btn-sm btn-light border border-dark rounded-circle' href='/group-chat/create') 
+                            i(class="fa-solid fa-plus") 
 
+                form.mt-1()
+                    .input-group.input-group-sm
+                        input(
+                            type="text" 
+                            class="form-control"     
+                            placeholder="Tìm kiếm..." 
+                            name="keyword"
+                            value=keyword || undefined
+                        )
 
-    include ../../partials/list-btn-users.pug
-
-    .section-product-featured.my-5
-        .container.my-2
-            .row 
-                .col-12 
-                    +box-head("Chat")
-
-
-            .row 
-                .col-12
-                    .chat(my-id=user.id)
-                        .inner-head 
+                        .input-group-append
+                            button(
+                                type="submit" 
+                                class=`btn btn-secondary`
+                            ) 
+                                i(class="fa-solid fa-magnifying-glass")
+                    
+                hr.mt-1
+                .btn-group-vertical.btn-block 
+                    each roomChat in roomsChat
+                        a(class='form-control btn btn-sm btn-light text-left label-chat border-top border-bottom' href=`/chat/${roomChat._id}`) 
                             .inner-avatar 
                                 img(
-                                    src=roomChat.avatar
+                                    src=(roomChat.avatar || '/images/group-chat-avatar.jpg')
                                     )  
-                                span(class='status-light' status=user.statusOnline)
+                                span(class='status-light' status=roomChat.statusOnline)
                             .inner-name 
                                 span #{roomChat.title}
-                                span.status-online.text-muted #{(user.statusOnline == 'online') ? 'Online' : 'Offline'}
-                        
-                        .inner-body 
-                            each chat in chats 
-                                div(class = (user.id == chat.userInfo.id ? 'inner-outgoing' : 'inner-incoming'))
-                                    if (user.id != chat.userInfo.id) 
-                                        .inner-avatar 
-                                            img(
-                                                src= chat.userInfo.avatar
-                                            )  
+                                span.inner-content.p-0.text-muted Bạn: :))
 
-                                    .inner-text 
+            
+                            
+
+            .col-9 
+
+                .row.my-5 
+                    .col-12
+                        .chat(my-id=user.id)
+                            .inner-head 
+                                .inner-avatar 
+                                    img(
+                                        src=(currRoomChat.avatar ||'/images/group-chat-avatar.jpg')
+                                        )  
+                                    span(class='status-light' status=currRoomChat.statusOnline)
+                                .inner-name 
+                                    span #{currRoomChat.title}
+                                    span.status-online.text-muted #{(currRoomChat.statusOnline == 'online') ? 'Online' : 'Offline'}
+                            
+                            .inner-body 
+                                each chat in chats 
+                                    div(class = (user.id == chat.userInfo.id ? 'inner-outgoing' : 'inner-incoming'))
                                         if (user.id != chat.userInfo.id) 
-                                            small.inner-name #{chat.userInfo.fullName}
-                                        if (chat.images.length > 0)
-                                            .inner-image.mr-2 
-                                                each image in chat.images 
-                                                    div
-                                                        img(src=image)
-                                        if (chat.content)
-                                            .inner-content #{chat.content}
-                                            
-                        .inner-preview
-                            div(class="custom-file-container" data-upload-id="image-upload")
-                        .inner-foot 
-                            form(
-                                action=''
-                                class='inner-form'
-                            )
-                                label(class='btn mb-0' for='file-upload-with-preview-image-upload')
-                                    i(class="fa-regular fa-image")
-                                span(class='btn btn-icon')
-                                    i(class="fa-regular fa-face-grin-beam")
+                                            .inner-avatar 
+                                                img(
+                                                    src= chat.userInfo.avatar
+                                                )  
 
-                                input(
-                                    type='text'
-                                    placeholder='Aa'
-                                    name='content'
-                                    autocomplete='off'
+                                        .inner-text 
+                                            if (user.id != chat.userInfo.id) 
+                                                small.inner-name #{chat.userInfo.fullName}
+                                            if (chat.images.length > 0)
+                                                .inner-image.mr-2 
+                                                    each image in chat.images 
+                                                        div
+                                                            img(src=image)
+                                            if (chat.content)
+                                                .inner-content #{chat.content}
+                                                
+                            .inner-preview
+                                div(class="custom-file-container" data-upload-id="image-upload")
+                            .inner-foot 
+                                form(
+                                    action=''
+                                    class='inner-form'
                                 )
+                                    label(class='btn mb-0' for='file-upload-with-preview-image-upload')
+                                        i(class="fa-regular fa-image")
+                                    span(class='btn btn-icon')
+                                        i(class="fa-regular fa-face-grin-beam")
 
-                                button(class="btn btn-secondary ml-2 mr-2")
-                                    i(class="fa-regular fa-paper-plane")
+                                    input(
+                                        type='text'
+                                        placeholder='Aa'
+                                        name='content'
+                                        autocomplete='off'
+                                    )
+
+                                    button(class="btn btn-secondary ml-2 mr-2")
+                                        i(class="fa-regular fa-paper-plane")
                                     
     div(class="tooltip" role="tooltip") 
         emoji-picker(class='light')
