--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -36,10 +36,7 @@ header.header
                 .inner-menu
                     ul 
                         li.mr-2 
-                            a(href='/cart' class='mini-cart') 
-                                //- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-                                //-     <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
-                                //- </svg>
+                            a(href='/cart' class='mini-cart' title='Giỏ hàng') 
                                 i(class="fa-solid fa-cart-shopping")
                                 span(class='badge badge-info') #{miniCart ? miniCart.total : 0}
                         
@@ -50,11 +47,11 @@ header.header
                                     span(style='font-weight:400; text-transform: capitalize') Đăng nhập
                         else    
                             li 
-                                a(href='/users/friends') 
+                                a(href='/users/friends' title='Bạn bè') 
                                     i(class="fa-solid fa-users-viewfinder")
 
                             li(class='multi-menu mt-1')  
-                                a(href='/user/info' class='btn btn-outline-dark btn-sm' style='border-radius:40px; background-color: inherit;color: inherit;') 
+                                a(href='/user/info' class='btn btn-outline-dark btn-sm' style='border-radius:40px; background-color: inherit;color: inherit;' title='Thông tin cá nhân') 
                                     image(src=user.avatar class='mini-avatar border') 
                                     span(style='font-weight:400; text-transform: capitalize') #{user.fullName}
 
