--- a/views/client/partials/list-btn-users.pug
+++ b/views/client/partials/list-btn-users.pug
@@ -1,19 +1,18 @@
-.container 
-    .row 
-        .col-3 
-            a(class='form-control btn btn-sm btn-light' href='/users/not-friend') 
-                i(class="fa-solid fa-user-group mr-2")
-                | Danh sách người dùng
-        .col-3 
-            a(class='form-control btn btn-sm btn-light' href='/users/friends') 
-                i(class="fa-solid fa-user-check mr-2")
-                | Danh sách bạn bè
-        .col-3 
-            a(class='form-control btn btn-sm btn-light' href='/users/request') 
-                i(class="fa-solid fa-users mr-2")
-                | Lời mời đã gửi
-        .col-3 
-            a(class='form-control btn btn-sm btn-light' href='/users/accept') 
-                i(class="fa-solid fa-user-plus mr-2")
-                | Lời mời kết bạn
-                span(class='badge badge-info rounded-circle ml-2' badge-noti-accept) #{user.acceptFriends.length <= 99 ? user.acceptFriends.length:'+99'}
+.btn-group-vertical.btn-block 
+    //- .list-group-item.p-0 
+    a(class='form-control btn btn-sm btn-light text-left' href='/users/not-friend') 
+        i(class="fa-solid fa-user-group mr-2")
+        | Danh sách người dùng
+    //- .list-group-item.p-0
+    a(class='form-control btn btn-sm btn-light text-left' href='/users/friends') 
+        i(class="fa-solid fa-user-check mr-2")
+        | Danh sách bạn bè
+    //- .list-group-item.p-0
+    a(class='form-control btn btn-sm btn-light text-left' href='/users/request') 
+        i(class="fa-solid fa-users mr-2")
+        | Lời mời đã gửi
+    //- .list-group-item.p-0
+    a(class='form-control btn btn-sm btn-light text-left' href='/users/accept') 
+        i(class="fa-solid fa-user-plus mr-2")
+        | Lời mời kết bạn
+        span(class='badge badge-info rounded-circle ml-2' badge-noti-accept) #{user.acceptFriends.length <= 99 ? user.acceptFriends.length:'+99'}
