--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -18,6 +18,7 @@ block main
                             placeholder="Tìm kiếm..." 
                             name="keyword"
                             value=keyword || undefined
+                            autocomplete='off'
                         )
 
                         .input-group-append
