--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -6,6 +6,8 @@ html
         
         link(rel="stylesheet", href="/css/style.css")
         link(rel="stylesheet", href="/css/article.css")
+        link(rel="stylesheet", href="/css/chat.css")
+
         link(rel="icon" href=settingGeneral.favicon type="image/x-icon")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
@@ -13,6 +15,7 @@ html
         link(rel="stylesheet" href="https://unpkg.com/file-upload-with-preview/dist/style.css")
         //- Thư viện viewerjs hỗ trợ view fullscreen image
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.css" integrity="sha512-eG8C/4QWvW9MQKJNw2Xzr0KW7IcfBSxljko82RuSs613uOAg/jHEeuez4dfFgto1u6SRI/nXmTr9YPCjs1ozBg==" crossorigin="anonymous" referrerpolicy="no-referrer")
+        
     body 
         include ../partials/header.pug
 
