--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -2,6 +2,24 @@ extends ../../layouts/default.pug
 
 block main 
     .container.my-2
+        //- Modal đổi tên nhóm chat
+        div(class="modal fade" id="edit-name-chat" tabindex="-1" aria-labelledby="edit-name-chat" aria-hidden="true" form-change-phone)
+            div(class="modal-dialog")
+                div(class="modal-content")
+                    div(class="modal-header")
+                        h5(class="modal-title" id="edit-name-chat") Đổi tên đoạn chat
+                        button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+                            span(aria-hidden="true") &times;
+                        
+                    div(class="modal-body")
+                        small.text-muted.text-right Mọi người đều biết khi tên nhóm chat thay đổi.
+                        input(type='text' class='form-control' name='title' placeholder='Aa...' value=currRoomChat.title)
+
+                    div(class="modal-footer")
+                        button(type="button" class="btn btn-secondary" data-dismiss="modal") Đóng 
+                        button(class='btn btn-primary' data-dismiss="modal" submit-name-chat) OK
+        //- End modal (ẩn nha)
+
         .row    
             .col-3.my-5.label
                 .d-flex.justify-content-between
@@ -65,7 +83,7 @@ block main
                                                 .inner-avatar.text-center 
                                                     img(src=(currRoomChat.avatar || '/images/group-chat-avatar.jpg'))
                                                 .inner-name.text-center 
-                                                    b #{currRoomChat.title}
+                                                    span #{currRoomChat.title}
 
                                             ul(class="list-group list-group-flush")
                                                 li(class="list-group-item pr-2 pl-2 pt-1 pb-1 item-setting") 
@@ -76,15 +94,16 @@ block main
                                                             i(class="fa-solid fa-chevron-down d-none")
                                                     
                                                     div.list-setting
-                                                        p.m-0.item-list-setting.d-none 
+                                                        p.m-0.item-list-setting.d-none( data-toggle="modal" data-target="#edit-name-chat") 
                                                             small(style='font-size: 10px')
                                                                 i(class="fa-solid fa-pen-to-square mr-2") 
                                                                 | Đổi tên đoạn chat 
 
-                                                        p.m-0.item-list-setting.d-none  
+                                                        p.m-0.item-list-setting.edit-image.d-none  
                                                             small(style='font-size: 10px') 
                                                                 i(class="fa-solid fa-image mr-2")
                                                                 |Thay đổi ảnh 
+                                                            input(type='file' name='avatar' class='d-none' accept='image/*')
 
                                                 li(class="list-group-item pr-2 pl-2 pt-1 pb-1 item-setting") 
                                                     div.d-flex.justify-content-between.align-items-center.item-list-setting 
@@ -147,6 +166,7 @@ block main
                                                 
                             .inner-preview
                                 div(class="custom-file-container" data-upload-id="image-upload")
+
                             .inner-foot 
                                 form(
                                     action=''
