--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -20,6 +20,31 @@ block main
                         button(class='btn btn-primary' data-dismiss="modal" submit-name-chat) OK
         //- End modal (ẩn nha)
 
+        //- Modal Thêm người 
+        div(class="modal fade" id="add-friends" tabindex="-1" aria-labelledby="add-friends" aria-hidden="true" form-change-phone)
+            div(class="modal-dialog")
+                div(class="modal-content")
+                    div(class="modal-header")
+                        h5(class="modal-title" id="add-friends") Thêm người
+                        button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+                            span(aria-hidden="true") &times;
+                        
+                    div(class="modal-body")
+                        small.text-muted.text-right Gợi ý
+                            .box-user
+                                each friend in friends
+                                    .d-flex.align-items-center
+                                        .inner-check-box 
+                                            input(type='checkbox' name='userId' id=friend._id)
+                                        .inner-avatar 
+                                            img(src=friend.avatar)
+                                        label(for=friend._id) #{friend.fullName}
+
+                    div(class="modal-footer")
+                        button(type="button" class="btn btn-secondary" data-dismiss="modal") Đóng 
+                        button(class='btn btn-primary' data-dismiss="modal" submit-add-friend-room-chat) Thêm
+        //- End modal (ẩn nha)
+
         .row    
             .col-3.my-5.label
                 .d-flex.justify-content-between
@@ -122,11 +147,11 @@ block main
                                                                     span.setting-user(style='font-size: 10px' user-id=item.id).mt-2 
                                                                         i(class="fa-solid fa-xmark")
 
-
-                                                        p.m-0.item-list-setting.d-none 
-                                                            small(style='font-size: 10px')
-                                                                i(class="fa-solid fa-plus mr-2") 
-                                                                | Thêm người 
+                                                        if (currRoomChat.roleUser == 'super admin')
+                                                            p.m-0.item-list-setting.d-none(data-toggle="modal" data-target="#add-friends") 
+                                                                small(style='font-size: 10px')
+                                                                    i(class="fa-solid fa-plus mr-2") 
+                                                                    | Thêm người 
 
                                                 li(class="list-group-item pr-2 pl-2 pt-1 pb-1 item-setting") 
                                                     div.d-flex.justify-content-between.align-items-center.item-list-setting 
@@ -136,14 +161,15 @@ block main
                                                             i(class="fa-solid fa-chevron-down d-none")
                                                     
                                                     div.list-setting
-                                                        p.m-0.item-list-setting.d-none
+                                                        p.m-0.item-list-setting.d-none.out-group-chat
                                                             small(style='font-size: 10px')
                                                                 i(class="fa-solid fa-right-from-bracket mr-2")
                                                                 | Rời nhóm
-                                                        p.m-0.item-list-setting.d-none
-                                                            small(style='font-size: 10px')
-                                                                i(class="fa-solid fa-trash mr-2")
-                                                                | Xóa nhóm 
+                                                        if (currRoomChat.roleUser == 'super admin')
+                                                            p.m-0.item-list-setting.d-none.delete-group-chat
+                                                                small(style='font-size: 10px')
+                                                                    i(class="fa-solid fa-trash mr-2")
+                                                                    | Xóa nhóm 
 
 
                             .inner-body 
